# URSKA_v2_be

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs
src/rag/: mod.rs
src/rag/comm/: embedding.rs  mod.rs  qdrant.rs  question.rs  structured_qustion.rs
src/rag/loading/: loaded_data.rs  markdown.rs
src/rag/loading.rs/: mod.rs  pdf.rs  text.rs
src/rag/models/: input.rs  mod.rs  output.rs
src/rag/models/chunks/: chunk.rs  embedded_chunk.rs  hype_chunk.rs  mod.rs  result_chunk.rs
src/rag/models/files/: chunked_file.rs  mod.rs
src/rag/processing/: dedup_embeddings.rs  embedd_file.rs  hype.rs  mod.rs  prepare.rs  prompt.rs  recursive_prompt.rs  simple.rs  summarize.rs
src/rag/processing/chunking/: mod.rs  paragraph.rs  simple.rs
src/server/: mod.rs
