[package]
name = "URSKA_v2_be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
actix-cors = "0.7.0"
ollama-rs = { version = "0.2.3", features = ["stream"] }
anyhow = "1.0.95"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.135"
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }
uuid = { version = "1.12.0", features = ["v4"] }
rayon = "1.10.0"
futures = "0.3.31"
regex = "1.11.1"
once_cell = "1.20.2"
qdrant-client = "1.13.0"
tonic = "0.11.0"
tokio-stream = "0.1.17"
schemars = "0.8.21"
